--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -683,8 +683,9 @@
                         .justifyContet(center);
 
                         img {
-                            max-width: 100%;
-                            max-height: 100%;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: contain;
                         }
                     }
 
@@ -792,4 +793,10 @@
             background: @frontColor;
         }
     }
+}
+
+.mdno-object-fit .flashcardPage .card-player .card-template .card-content .side .img-container img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
