--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -839,8 +839,9 @@
   justify-content: center;
 }
 .flashcardPage .card-player .card-template .card-content .side .img-container img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .flashcardPage .card-player .card-template .card-content .side .text-container {
   display: -webkit-flex;
@@ -904,4 +905,9 @@
 }
 .flashcardPage .md-bar {
   background-color: #c3c3c3;
+}
+.mdno-object-fit .flashcardPage .card-player .card-template .card-content .side .img-container img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
