--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -115,9 +115,12 @@
 
             .add-btn {
                 display: none;
-                position: absolute;
-                left: -31px;
-                bottom: -18px;
+
+                @media(min-width: 600px) {
+                    position: absolute;
+                    left: -31px;
+                    bottom: -18px;
+                }
                 /*@media(min-width: 600px) {
                         position: absolute;
                         bottom: -16px;
@@ -136,9 +139,12 @@
 
             .drag-btn {
                 display: none;
-                position: absolute;
-                left: -26px;
-                top: ~"calc(50% - 10px)";
+
+                @media(min-width: 600px) {
+                    position: absolute;
+                    left: -26px;
+                    top: ~"calc(50% - 10px)";
+                }
 
                 md-icon {
                     width: 14px;
@@ -149,9 +155,12 @@
 
             .remove-btn {
                 display: none;
-                position: absolute;
-                right: -27px;
-                top: ~"calc(50% - 10px)";
+
+                @media(min-width: 600px) {
+                    position: absolute;
+                    right: -27px;
+                    top: ~"calc(50% - 10px)";
+                }
 
                 md-icon {
                     width: 15px;
