--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -60,12 +60,19 @@
 }
 //.mixin-loop (0) {}
 .mixin-loop(@iterations);
-.lowercase{
-    text-transform:lowercase;
+
+.lowercase {
+    text-transform: lowercase;
 }
-.capitalize{
-    text-transform:uppercase;
+
+.capitalize {
+    text-transform: capitalize;
 }
+
+.upper-case {
+    text-transform: uppercase;
+}
+
 button {
     border: 0;
     background: transparent;
