--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.css
@@ -92,6 +92,9 @@
   align-items: stretch;
   position: relative;
 }
+.flashcard .flashcard-body .card-container.on-drag-hover:not(.focused) {
+  padding-top: 100px;
+}
 .flashcard .flashcard-body .card-container .settings-btn {
   display: -webkit-flex;
   display: -ms-flex;
@@ -118,11 +121,6 @@
 }
 .flashcard .flashcard-body .card-container .add-btn {
   display: none;
-  /*@media(min-width: 600px) {
-                        position: absolute;
-                        bottom: -16px;
-                        left: -28px;
-                    }*/
 }
 @media (min-width: 600px) {
   .flashcard .flashcard-body .card-container .add-btn {
@@ -134,10 +132,6 @@
 .flashcard .flashcard-body .card-container .add-btn md-icon {
   width: 19px;
   height: 19px;
-  /*@media(max-width: 600px) {
-                            width: 16px;
-                            height: 16px;
-                        }*/
 }
 .flashcard .flashcard-body .card-container .drag-btn {
   display: none;
@@ -170,8 +164,11 @@
 }
 @media (min-width: 600px) {
   .flashcard .flashcard-body .card-container.focused .drag-btn,
+  .flashcard .flashcard-body .card-container:hover .drag-btn,
   .flashcard .flashcard-body .card-container.focused .remove-btn,
-  .flashcard .flashcard-body .card-container.focused .add-btn {
+  .flashcard .flashcard-body .card-container:hover .remove-btn,
+  .flashcard .flashcard-body .card-container.focused .add-btn,
+  .flashcard .flashcard-body .card-container:hover .add-btn {
     display: inline-block;
   }
 }
@@ -179,30 +176,19 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  /*&:focus md-icon {
-                    display: block;
-                }*/
 }
 .flashcard .flashcard-body .card-container card-form md-input-container {
   border: 1px solid #b7b7b7;
   background: #ffffff;
   padding-left: 10px;
   margin: 0;
+}
+.flashcard .flashcard-body .card-container card-form md-input-container.has-image {
   padding: 0 0 65px 0;
-  /*.add-image-btn:focus {
-                        display: block;
-                        outline: none;
-                    }*/
 }
 @media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container card-form md-input-container {
+  .flashcard .flashcard-body .card-container card-form md-input-container.has-image {
     padding: 0 65px 0 0;
-    /*&:focus, &.md-input-focused {
-                            md-icon {
-                                display: block;
-                                outline: none;
-                            }
-                        }*/
   }
 }
 .flashcard .flashcard-body .card-container card-form md-input-container .md-errors-spacer {
@@ -291,9 +277,6 @@
   right: 0;
   top: 1px;
   bottom: 1px;
-  /*@media(min-width: 600px) {
-                    visibility: hidden;
-                }*/
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container .card-settings {
@@ -306,11 +289,6 @@
     transition: left 0.2s ease !important;
     background: #eeeeee;
   }
-}
-.flashcard .flashcard-body .card-container .card-settings.active {
-  /*@media(min-width: 600px) {
-                        visibility: visible;
-                    }*/
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container .card-settings.active {
@@ -383,11 +361,6 @@
 }
 .flashcard .flashcard-body .card-container .settings-toggler {
   display: none;
-}
-.flashcard .flashcard-body .card-container .settings-toggler:checked ~ .card-settings {
-  /*@media(min-width: 600px) {
-                        visibility: visible;
-                    }*/
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container .settings-toggler:checked ~ .card-settings {
