--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -402,6 +402,14 @@
   justify-content: center;
   text-align: center;
   margin-top: 24px;
+  position: absolute;
+}
+@media (min-width: 600px) {
+  .flashcardPage nav.buttons {
+    top: 560px;
+    right: 50%;
+    left: 50%;
+  }
 }
 @media (max-width: 600px) {
   .flashcardPage nav.buttons {
@@ -437,6 +445,7 @@
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  position: relative;
 }
 .flashcardPage .card-template {
   width: 100%;
@@ -503,10 +512,6 @@
 }
 .flashcardPage .card-template.both .side.back .pinned {
   display: none;
-}
-.flashcardPage .card-template.ng-hide-add,
-.flashcardPage .card-template.ng-hide-remove {
-  transition: 10s linear all;
 }
 .flashcardPage .card-template.ng-hide-add {
   animation-name: cardOut;
