--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.css
@@ -835,6 +835,7 @@
   flex-grow: 1;
   width: 100%;
   height: 100%;
+  max-height: 400px;
 }
 @media (max-width: 600px) {
   .flashcardPage .card-player .card-template .card-content .side .data-wrapper {
