--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -178,14 +178,15 @@
                 md-input-container {
                     border: 1px solid #b7b7b7;
                     background: @textColorWhite;
-                    padding-left: 10px;
                     margin: 0;
 
                     &.has-image {
-                        padding: 0 0 65px 0;
+                        padding-right: 0;
+                        padding-bottom: @cardHeight;
 
                         @media(min-width: 600px) {
-                            padding: 0 65px 0 0;
+                            padding-right: @cardHeight;
+                            padding-bottom: 0;
                         }
                     }
 
@@ -219,9 +220,10 @@
                     .align-items(center);
                     flex-direction: column;
                     height: 100%;
+                    padding: 0 0 5px 3px;
 
                     @media(min-width: 600px) {
-                        min-height: @cardHeight;
+                        min-height: @cardHeight - 5px;
                     }
 
                     textarea {
