--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -447,99 +447,6 @@
   margin: 0 auto;
   position: relative;
 }
-.flashcardPage .card-template {
-  width: 100%;
-  height: 400px;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: stretch;
-  align-items: stretch;
-  -webkit-justify-content: center;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
-  /*&.front, &.back {
-            .transition(5s, all, ease);
-            .flip-container {
-                perspective: 1000px;
-            }
-
-            .flip-container, .front, .back {
-                width: 800px;
-                height: 400px;
-            }
-
-            .flipper {
-                transition: 0.6s;
-                transform-style: preserve-3d;
-                position: relative;
-            }
-
-            .front, .back {
-                backface-visibility: hidden;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-
-            .front {
-                z-index: 2;
-                transform: rotateY(0deg);
-            }
-
-            .back {
-                transform: rotateY(180deg);
-            }
-        }
-
-        &.back-add-active {
-            .flip-container .flipper {
-                transform: rotateY(180deg);
-            }
-        }*/
-}
-.flashcardPage .card-template.both {
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
-}
-.flashcardPage .card-template.both .front {
-  border-left: 1px solid #c3c3c3;
-}
-.flashcardPage .card-template.both .data-wrapper {
-  cursor: auto;
-}
-.flashcardPage .card-template.both .side.back .pinned {
-  display: none;
-}
-.flashcardPage .card-template.ng-hide-add {
-  animation-name: cardOut;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-out;
-  animation-iteration-count: 1;
-  position: absolute !important;
-  height: 400px;
-  max-width: 800px;
-  width: 100%;
-  /* the transition is defined in the active class */
-}
-.flashcardPage .card-template.ng-hide-remove {
-  animation-name: cardIn;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-out;
-  animation-iteration-count: 1;
-  position: absolute !important;
-  height: 400px;
-  max-width: 800px;
-  width: 100%;
-  /* the transition is defined in the active class */
-}
-@media (max-width: 600px) {
-  .flashcardPage .card-template.ng-hide {
-    display: block !important;
-  }
-}
 .flashcardPage .front .flip-container,
 .flashcardPage .back .flip-container {
   perspective: 1000px;
@@ -750,7 +657,56 @@
   }
 }
 .flashcardPage .card-player .card-template {
+  width: 100%;
+  height: 400px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  -webkit-justify-content: center;
+  justify-content: center;
+  flex-direction: column;
   position: relative;
+  /*&.front, &.back {
+            .transition(5s, all, ease);
+            .flip-container {
+                perspective: 1000px;
+            }
+
+            .flip-container, .front, .back {
+                width: 800px;
+                height: 400px;
+            }
+
+            .flipper {
+                transition: 0.6s;
+                transform-style: preserve-3d;
+                position: relative;
+            }
+
+            .front, .back {
+                backface-visibility: hidden;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+
+            .front {
+                z-index: 2;
+                transform: rotateY(0deg);
+            }
+
+            .back {
+                transform: rotateY(180deg);
+            }
+        }
+
+        &.back-add-active {
+            .flip-container .flipper {
+                transform: rotateY(180deg);
+            }
+        }*/
   /*&.front .card-content {
                 .side.back {
                     display: none;
@@ -762,6 +718,33 @@
                     display: none;
                 }
             }*/
+}
+.flashcardPage .card-player .card-template.ng-hide-add {
+  animation-name: cardOut;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+  position: absolute !important;
+  height: 400px;
+  max-width: 800px;
+  width: 100%;
+  /* the transition is defined in the active class */
+}
+.flashcardPage .card-player .card-template.ng-hide-remove {
+  animation-name: cardIn;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+  position: absolute !important;
+  height: 400px;
+  max-width: 800px;
+  width: 100%;
+  /* the transition is defined in the active class */
+}
+@media (max-width: 600px) {
+  .flashcardPage .card-player .card-template.ng-hide {
+    display: block !important;
+  }
 }
 .flashcardPage .card-player .card-template.front .card-content .side,
 .flashcardPage .card-player .card-template.back .card-content .side {
@@ -799,6 +782,25 @@
   max-width: 100%;
   margin: 0 auto;
   display: block;
+}
+.flashcardPage .card-player .card-template.both {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
+}
+.flashcardPage .card-player .card-template.both .front {
+  border-left: 1px solid #c3c3c3;
+}
+.flashcardPage .card-player .card-template.both .card-content .side .data-wrapper {
+  cursor: auto;
+}
+@media (max-width: 600px) {
+  .flashcardPage .card-player .card-template.both .card-content .side .data-wrapper {
+    max-height: 200px;
+  }
+}
+.flashcardPage .card-player .card-template.both .side.back .pinned {
+  display: none;
 }
 .flashcardPage .card-player .card-template .card-content {
   display: -webkit-flex;
