Ad sense is back in the site.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -1,9 +1,12 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Box.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
+<div class="ad">
+    <adsense ad-client="ca-pub-1215688692145777" ad-slot="8210510557" inline-style="display:block;" ad-format="auto"></adsense>
+</div>
 @*<div class="ad" data-ng-dfp-ad-container>
-    <div data-ng-dfp-ad="div-gpt-ad-1461243129238-3" data-ng-dfp-ad-hide-when-empty></div>
-</div>*@
+        <div data-ng-dfp-ad="div-gpt-ad-1461243129238-3" data-ng-dfp-ad-hide-when-empty></div>
+    </div>*@
 <div uib-collapse="!b.inviteOpen" compile-html="b.html" expanding="b.inviteExpand()" class="collapsible"></div>
 <div class="page-head">
     <div layout="row" layout-align="start start" ng-hide="b.settingsOpen" class="page-title box-title" ng-class="{'need-follow' : b.needFollow}">
@@ -35,10 +38,10 @@
     <div class="share-section">
         <div class="share-options">
             <button type="button" class="share-btn share-fb" aria-label="share" ga-track-event="['box-feed', 'share']">
-                <md-icon class = "fb" md-svg-icon="b:facebook-colored"></md-icon>
+                <md-icon class="fb" md-svg-icon="b:facebook-colored"></md-icon>
             </button>
             <a class="share-btn share-whatsapp" aria-label="share" target="_blank" href="" ga-track-event="['box-feed', 'share']">
-                <md-icon class = "whatsapp" md-svg-icon="b:whatsapp"></md-icon>
+                <md-icon class="whatsapp" md-svg-icon="b:whatsapp"></md-icon>
             </a>
         </div>
     </div>
