--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Dashboard.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<div uib-collapse="!d.inviteOpen" compile-html="d.html" expanding="d.inviteExpand()"></div>
-<div class="ad" data-ng-dfp-ad-container>
-    <div data-ng-dfp-ad="div-gpt-ad-1461243129238-0" data-ng-dfp-ad-hide-when-empty></div>
+<div class="ad">
+    <adsense ad-client="ca-pub-1215688692145777" ad-slot="8210510557" inline-style="display:block;" ad-format="auto"></adsense>
 </div>
+<div uib-collapse="!d.inviteOpen" compile-html="d.html" expanding="d.inviteExpand()"></div>
+
+@*<div class="ad" data-ng-dfp-ad-container>
+    <div data-ng-dfp-ad="div-gpt-ad-1461243129238-0" data-ng-dfp-ad-hide-when-empty></div>
+</div>*@
 <div class="page-title">
     <h1>@DashboardResource.Title</h1>
 </div>
