--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Menu.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_Menu.cshtml
@@ -94,7 +94,7 @@
                         <span>@IndexResources.Logout</span>
                     </a>
                 </li>
-                <menu-ad></menu-ad>
+                <adsense ad-client="ca-pub-1215688692145777" ad-slot="8210510557" inline-style="display:block;" ad-format="auto"></adsense>
             </ul>
         </md-content>
     </md-sidenav>
